--- a/data/coco128.yaml
+++ b/data/coco128.yaml
@@ -8,7 +8,7 @@
 
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
-path: /content/drive/Shareddrives/newpro112233/competition/data  # dataset root dir
+path: ./dataset  # dataset root dir
 train: train  # train images (relative to 'path') 128 images
 val: valid  # val images (relative to 'path') 128 images
 test: test # test images (optional)
